# algo

./: CMakeLists.txt  README.md
src/: 1_1.cpp  main.cpp  stammdaten.cpp  stammdaten.h  stammdaten_array.cpp  stammdaten_array.h
